<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:icon="@android:drawable/ic_menu_home"
        android:title="@string/home" />
    <item
        android:id="@+id/navigation_medicines"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/medicines" />
    <item
        android:id="@+id/navigation_pharmacies"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:title="@string/pharmacies" />
    <item
        android:id="@+id/navigation_cart"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/cart" />
    <item
        android:id="@+id/navigation_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
