<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.getmedbd.customer.home.HomeFragment"
        android:label="@string/home" />

    <fragment
        android:id="@+id/navigation_medicines"
        android:name="com.getmedbd.customer.medicines.MedicinesFragment"
        android:label="@string/medicines" />

    <fragment
        android:id="@+id/navigation_pharmacies"
        android:name="com.getmedbd.customer.pharmacies.PharmaciesFragment"
        android:label="@string/pharmacies" />

    <fragment
        android:id="@+id/navigation_cart"
        android:name="com.getmedbd.customer.cart.CartFragment"
        android:label="@string/cart" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.getmedbd.customer.profile.ProfileFragment"
        android:label="@string/profile" />

</navigation>
